# roadrecon/frontend-react/src/api/types.ts
@@ -61,6 +61,8 @@ export type Condition = S['Condition']
 export type PolicyDetail = S['PolicyDetail']
 export type MatchReason = S['MatchReason']
 export type PolicyMatch = S['PolicyMatch']
+export type WhatIfResult = S['WhatIfResult']
+export type WhatIfMatch = S['WhatIfMatch']
 export type PolicyTargetType = paths['/api/policies/affecting/{type}/{id}']['get']['parameters']['path']['type']
 export type NamedLocationRow = S['NamedLocationRow']
 export type NamedLocationDetail = S['NamedLocationDetail']
@@ -97,3 +99,4 @@ export type OAuth2GrantQuery = Routes['/api/oauth2-grants']['query']
 export type AzureRoleAssignmentQuery = Routes['/api/azure-role-assignments']['query']
 export type PolicyQuery = Routes['/api/policies']['query']
 export type PolicyUserQuery = Routes['/api/policies/{id}/users']['query']
+export type WhatIfQuery = Routes['/api/policies/what-if']['query']
